# boston-housing-mlops

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yml  training_fixed.yml  training_search.yml
docker/: Dockerfile.api  Dockerfile.mlflow  minio.sh
monitoring/grafana/dashboards/: api_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda_and_preprocessing.ipynb  02_training_and_selection.ipynb
scripts/: lambda_drift.py  migrate_csv_to_sqlite.py  run_training_pipeline.py  simulate_traffic.py  validate_and_promote.py
src/api/: main.py  metrics.py  model_loader.py  routes.py
src/core/: config.py  logging.py  models.py
src/data/: repository.py  schema.py
src/drift/: base.py  ks_detector.py
src/mlops/: integration.py  promotion.py  retrain.py  training_strategies.py
src/pipeline/: base_pipeline.py  concrete_pipeline.py  preprocessor.py  trainer.py
src/storage/: minio_client.py  mlflow_client.py
src/utils/: utils.py
tests/: conftest.py
tests/integration/: test_api_predict.py
tests/unit/: test_base_pipeline.py  test_concrete_pipeline.py  test_ks_detector.py
