[tool.poetry]
name = "boston-housing-mlops"
version = "1.0.0"
description = "Pipeline MLOps integral para el problema de predicción de precios de vivienda en Boston. Arquitectura independiente de la nube basada en herramientas de código abierto y autoalojadas."
authors = ["Diego Lizarazo <imdlizarazo@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.14"
pydantic-settings = "^2.14.1"
pandas = "^3.0.3"
pyyaml = "^6.0.3"
