[tool.poetry]
name = "boston-housing-mlops"
version = "1.0.0"
description = "Pipeline MLOps integral para el problema de predicción de precios de vivienda en Boston. Arquitectura independiente de la nube basada en herramientas de código abierto y autoalojadas."
authors = ["Diego Lizarazo <imdlizarazo@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic-settings = "^2.14.1"
pandas = "<3"
pyyaml = "^6.0.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.9"
scikit-learn = "^1.8.0"
mlflow = "^3.12.0"
boto3 = "^1.43.6"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
pydantic = "^2.13.4"
prometheus-client = "^0.25.0"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
